# NLP-to-DSL-pipeline

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/: README.md
nl_dsl_strategy/: README.md  __init__.py  dsl_spec.md  requirements.txt
nl_dsl_strategy/src/: __init__.py  ast_nodes.py  backtest.py  codegen.py  demo.py  dsl_lexer_parser.py  indicators.py  nl_parser.py  nlp_spacy.py  validator.py
nl_dsl_strategy/tests/: conftest.py  test_backtest.py  test_codegen.py  test_crossover_func.py  test_dsl_parser.py  test_indicators.py  test_nl_mapping.py
scripts/: quick_check_nl_parser.py  run_strategy.py
tests/: test_backtest_drawdown.py  test_boolean_precedence.py  test_indicator_edge_cases.py  test_nl_ambiguity.py  test_parser_errors.py
